# ENGG4811_repo

./: README.md
M5StickCPlus/: M5StickCPlus_Thesis_Code.ino
pico_rtos/: README.md
pico_rtos/mylib/ctrl/: ctrl.c  ctrl.h
pico_rtos/mylib/led/: led.c  led.h
pico_rtos/mylib/meas/: meas.c  meas.h
pico_rtos/mylib/uart/: uart.c  uart.h
pico_rtos/proj/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOS_Kernel_import.cmake  pico_sdk_import.cmake
pico_rtos/proj/src/: main.c  main.h
